--- a/index.html
+++ b/index.html
@@ -27,13 +27,16 @@
         <button id="submit-choice-btn">Submit</button>
         
     </div>
+    <!-- Audio Import-->
     <div id="audio-controls">
         <audio id="audio" loop>
             <source src="audio/background_audio.mp3" type="audio/mp3">
             Your browser does not support the audio element.
         </audio>
+        <!-- Custom Audio Buttons -->
         <button id="audioPlayPauseBtn">Play</button>
         <button id="audioMuteBtn">Mute</button>
+        <!-- Change Audio Volume -->
         <input type="range" id="audioVolumeSlider" min="0" max="1" step="0.01" value="0.5">
         <!-- Help Button -->
     <button id="help-btn">Help</button>
